--- a/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
+++ b/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="557.0" prefWidth="717.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.example.sudoku6x6.Controller">
+<AnchorPane prefHeight="404.0" prefWidth="421.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku6x6.Controller">
     <children>
-        <GridPane fx:id="boardGrid" gridLinesVisible="true" layoutX="230.0" layoutY="118.0" prefHeight="191.0" prefWidth="235.0">
+      <Rectangle fx:id="Sombra" arcHeight="5.0" arcWidth="5.0" height="269.0" layoutX="59.0" layoutY="78.0" stroke="BLACK" strokeType="INSIDE" width="329.0" />
+      <Text fx:id="Title" layoutX="23.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sudoku 6x6 del Rios Moreno">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Text>
+      <Button fx:id="StartButton" layoutX="78.0" layoutY="356.0" mnemonicParsing="false" onAction="#Start" text="Inicio">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="RestartButton" layoutX="155.0" layoutY="356.0" mnemonicParsing="false" onAction="#Restart" text="Reinicio">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="IncognitButton" layoutX="248.0" layoutY="356.0" mnemonicParsing="false" onAction="#Incognit" text="?">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button fx:id="HelpButton" layoutX="293.0" layoutY="356.0" mnemonicParsing="false" onAction="#Help" text="Ayuda">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+        <GridPane fx:id="boardGrid" alignment="CENTER" gridLinesVisible="true" layoutX="52.0" layoutY="73.0" prefHeight="258.0" prefWidth="317.0">
 
             <columnConstraints>
                 <ColumnConstraints prefWidth="60.0" />
@@ -29,43 +59,46 @@
             </rowConstraints>
 
             <children>
-                <TextField fx:id="cell00" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="cell01" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <TextField fx:id="cell02" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-                <TextField fx:id="cell03" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-                <TextField fx:id="cell04" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="4" GridPane.rowIndex="0" />
-                <TextField fx:id="cell05" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="5" GridPane.rowIndex="0" />
-                <TextField fx:id="cell10" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <TextField fx:id="cell11" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField fx:id="cell12" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <TextField fx:id="cell13" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                <TextField fx:id="cell14" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                <TextField fx:id="cell15" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                <TextField fx:id="cell20" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <TextField fx:id="cell21" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <TextField fx:id="cell22" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                <TextField fx:id="cell23" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                <TextField fx:id="cell24" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                <TextField fx:id="cell25" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                <TextField fx:id="cell30" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <TextField fx:id="cell31" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <TextField fx:id="cell32" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                <TextField fx:id="cell33" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                <TextField fx:id="cell34" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                <TextField fx:id="cell35" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-                <TextField fx:id="cell40" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <TextField fx:id="cell41" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <TextField fx:id="cell42" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                <TextField fx:id="cell43" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                <TextField fx:id="cell44" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                <TextField fx:id="cell45" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                <TextField fx:id="cell50" alignment="CENTER" prefHeight="59.0" prefWidth="0.0" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                <TextField fx:id="cell51" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                <TextField fx:id="cell52" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                <TextField fx:id="cell53" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                <TextField fx:id="cell54" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                <TextField fx:id="cell55" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                <TextField fx:id="cell00" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="1" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="cell01" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="cell02" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                <TextField fx:id="cell03" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="4" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+                <TextField fx:id="cell04" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="5" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+                <TextField fx:id="cell05" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="6" GridPane.columnIndex="5" GridPane.rowIndex="0" />
+                <TextField fx:id="cell10" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="4" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField fx:id="cell11" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="cell12" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <TextField fx:id="cell13" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="1" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                <TextField fx:id="cell14" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="2" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                <TextField fx:id="cell15" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="3" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                <TextField fx:id="cell20" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="2" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="cell21" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="cell22" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="4" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                <TextField fx:id="cell23" alignment="CENTER" prefHeight="60.0" prefWidth="20.0" text="5" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                <TextField fx:id="cell24" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="6" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                <TextField fx:id="cell25" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="1" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                <TextField fx:id="cell30" alignment="CENTER" prefHeight="60.0" prefWidth="52.0" text="5" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <TextField fx:id="cell31" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="6" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <TextField fx:id="cell32" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="1" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                <TextField fx:id="cell34" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="3" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                <TextField fx:id="cell35" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="4" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                <TextField fx:id="cell40" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="6" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <TextField fx:id="cell41" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="1" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                <TextField fx:id="cell42" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="2" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                <TextField fx:id="cell43" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="3" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                <TextField fx:id="cell44" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="4" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                <TextField fx:id="cell45" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="5" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                <TextField fx:id="cell50" alignment="CENTER" prefHeight="59.0" prefWidth="0.0" text="3" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <TextField fx:id="cell51" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="4" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                <TextField fx:id="cell52" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="5" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                <TextField fx:id="cell53" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="6" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                <TextField fx:id="cell54" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="1" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                <TextField fx:id="cell55" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="2" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                <TextField fx:id="cell33" alignment="CENTER" prefHeight="60.0" prefWidth="60.0" text="2" GridPane.columnIndex="3" GridPane.rowIndex="3" />
             </children>
         </GridPane>
+      <Rectangle fx:id="Hor1" arcHeight="5.0" arcWidth="5.0" fill="#c5ff1f" height="7.0" layoutX="38.0" layoutY="161.0" stroke="BLACK" strokeType="INSIDE" width="337.0" />
+      <Rectangle fx:id="Hor2" arcHeight="5.0" arcWidth="5.0" fill="#bdff1f" height="7.0" layoutX="38.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="337.0" />
+      <Rectangle fx:id="Vertical" arcHeight="5.0" arcWidth="5.0" fill="#caff1f" height="277.0" layoutX="204.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="6.0" />
     </children>
 </AnchorPane>
