--- a/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
+++ b/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
@@ -10,25 +10,25 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="416.0" prefWidth="477.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku6x6.Controller">
+<AnchorPane prefHeight="428.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku6x6.Controller">
     <children>
       <Rectangle fx:id="Sombra" arcHeight="5.0" arcWidth="5.0" height="269.0" layoutX="59.0" layoutY="78.0" stroke="BLACK" strokeType="INSIDE" width="329.0" />
-      <Text fx:id="Title" layoutX="56.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUDOKU 6X6 :D">
+      <Text fx:id="Title" layoutX="98.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUDOKU 6X6 :D">
          <font>
             <Font size="30.0" />
          </font>
       </Text>
-      <Button fx:id="StartButton" layoutX="38.0" layoutY="356.0" mnemonicParsing="false" onAction="#Start" text="Inicio">
+      <Button fx:id="StartButton" layoutX="52.0" layoutY="356.0" mnemonicParsing="false" onAction="#Start" text="Inicio">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="RestartButton" layoutX="117.0" layoutY="356.0" mnemonicParsing="false" onAction="#Restart" text="Reinicio">
+      <Button fx:id="RestartButton" layoutX="146.0" layoutY="356.0" mnemonicParsing="false" onAction="#Restart" text="Reinicio">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="IncognitButton" layoutX="213.0" layoutY="356.0" mnemonicParsing="false" onAction="#Incognit" text="presioname si necesitas pistas ;)">
+      <Button fx:id="IncognitButton" layoutX="280.0" layoutY="356.0" mnemonicParsing="false" onAction="#Incognit" text="presioname si necesitas pistas ;)">
          <font>
             <Font size="16.0" />
          </font>
@@ -36,8 +36,14 @@
       <Button fx:id="HelpButton" layoutX="336.0" layoutY="18.0" mnemonicParsing="false" onAction="#Help" text="Ayuda">
          <font>
             <Font size="16.0" />
-         </font>
-      </Button>
+            </font>
+        </Button>
+        <Button fx:id="verificarSudokuButton" layoutX="403.0" layoutY="296.0" mnemonicParsing="false" onAction="#verificarVictoria" prefHeight="32.0" prefWidth="138.0" text="Verificar Sudoku">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Button>
+
         <GridPane fx:id="boardGrid" alignment="CENTER" gridLinesVisible="true" layoutX="52.0" layoutY="73.0" prefHeight="258.0" prefWidth="317.0">
 
             <columnConstraints>
