--- a/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
+++ b/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,40 +11,34 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="428.0" prefWidth="556.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku6x6.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku6x6.Controller">
     <children>
       <Rectangle fx:id="Sombra" arcHeight="5.0" arcWidth="5.0" height="269.0" layoutX="59.0" layoutY="78.0" stroke="BLACK" strokeType="INSIDE" width="329.0" />
-      <Text fx:id="Title" layoutX="98.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUDOKU 6X6 :D">
+      <Text fx:id="Title" layoutX="56.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SUDOKU 6X6 :D">
          <font>
             <Font size="30.0" />
          </font>
       </Text>
-      <Button fx:id="StartButton" layoutX="52.0" layoutY="356.0" mnemonicParsing="false" onAction="#Start" text="Inicio">
+      <Button fx:id="StartButton" layoutX="38.0" layoutY="356.0" mnemonicParsing="false" onAction="#Start" text="Inicio">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="RestartButton" layoutX="146.0" layoutY="356.0" mnemonicParsing="false" onAction="#Restart" text="Reinicio">
+      <Button fx:id="RestartButton" layoutX="117.0" layoutY="356.0" mnemonicParsing="false" onAction="#Restart" text="Reinicio">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="IncognitButton" layoutX="280.0" layoutY="356.0" mnemonicParsing="false" onAction="#Incognit" text="presioname si necesitas pistas ;)">
+      <Button fx:id="IncognitButton" layoutX="213.0" layoutY="356.0" mnemonicParsing="false" onAction="#Incognit" text="presioname si necesitas pistas ;)">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="HelpButton" layoutX="336.0" layoutY="18.0" mnemonicParsing="false" onAction="#Help" text="Ayuda">
+      <Button fx:id="HelpButton" layoutX="394.0" layoutY="20.0" mnemonicParsing="false" onAction="#Help" text="Ayuda">
          <font>
             <Font size="16.0" />
-            </font>
-        </Button>
-        <Button fx:id="verificarSudokuButton" layoutX="403.0" layoutY="296.0" mnemonicParsing="false" onAction="#verificarVictoria" prefHeight="32.0" prefWidth="138.0" text="Verificar Sudoku">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Button>
-
+         </font>
+      </Button>
         <GridPane fx:id="boardGrid" alignment="CENTER" gridLinesVisible="true" layoutX="52.0" layoutY="73.0" prefHeight="258.0" prefWidth="317.0">
 
             <columnConstraints>
@@ -106,5 +101,7 @@
       <Rectangle fx:id="Hor1" arcHeight="5.0" arcWidth="5.0" fill="#c5ff1f" height="7.0" layoutX="38.0" layoutY="161.0" stroke="BLACK" strokeType="INSIDE" width="337.0" />
       <Rectangle fx:id="Hor2" arcHeight="5.0" arcWidth="5.0" fill="#bdff1f" height="7.0" layoutX="38.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="337.0" />
       <Rectangle fx:id="Vertical" arcHeight="5.0" arcWidth="5.0" fill="#caff1f" height="277.0" layoutX="204.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="6.0" />
+      <Label text="Label" />
+      <Label fx:id="faltan4" layoutX="408.0" layoutY="120.0" prefHeight="48.0" prefWidth="155.0" text="cuantos  4 me faltan" />
     </children>
 </AnchorPane>
