--- a/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
+++ b/src/main/resources/com/example/sudoku6x6/sudoku_main.fxml
@@ -95,6 +95,6 @@
       <Rectangle fx:id="Hor1" arcHeight="5.0" arcWidth="5.0" fill="#c5ff1f" height="7.0" layoutX="38.0" layoutY="161.0" stroke="BLACK" strokeType="INSIDE" width="337.0" />
       <Rectangle fx:id="Hor2" arcHeight="5.0" arcWidth="5.0" fill="#bdff1f" height="7.0" layoutX="38.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="337.0" />
       <Rectangle fx:id="Vertical" arcHeight="5.0" arcWidth="5.0" fill="#caff1f" height="277.0" layoutX="204.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" width="6.0" />
-      <Label fx:id="cuatrocuatros" layoutX="394.0" layoutY="91.0" text="Faltan 4 Cuatros" />
+      <Label fx:id="Labelcuatros" layoutX="394.0" layoutY="91.0" text="Faltan 4 Cuatros" />
     </children>
 </AnchorPane>
